--- a/portfolio/src/pages/projects/project.css
+++ b/portfolio/src/pages/projects/project.css
@@ -1,3 +1,7 @@
 #carousel-item1 {
     background-image: url(./img/Screen\ Shot\ 2024-01-20\ at\ 8.04.59\ PM.png);
 }
+
+#imageHolder{
+    outline: 3px solid red;
+}
