--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,4 +1,17 @@
-#footer {
-    margin-top: 10%;
-};
+html, body {
+    height: 100%;
+  }
+  
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  main {
+    flex: 1;
+  }
+  
+  footer {
+    margin-top: auto;
+  }
 
