Almost ready to turn in

--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -1,3 +1,8 @@
 footer {
-    outline: 3px solid red;
+    outline: 3px solid red; 
+    position: absolute;
+    margin-top: auto;
+    bottom: 0;
+    width: 100%;
+    padding: 50px;
 }
